--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@types/debug": "^4.1.5",
+    "@types/supports-color": "^5.3.0",
     "debug": "^4.1.1",
     "tslib": "^1"
   },
