--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@oclif/test": "^1",
     "@types/chai": "^4",
     "@types/mocha": "^5",
+    "@types/nock": "^11.1.0",
     "@types/node": "^10",
     "chai": "^4",
     "eslint": "^5.13",
